--- a/frontend/web/rotaiq/package.json
+++ b/frontend/web/rotaiq/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2"
   },
