--- a/frontend/web/rotaiq/package.json
+++ b/frontend/web/rotaiq/package.json
@@ -18,12 +18,14 @@
     "@tabler/icons-react": "^3.34.1",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.8.2",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
