--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn rotaiq.wsgi:application
+web: gunicorn --bind 0.0.0.0:10000 rota_gaps_app.wsgi --settings=rota_gaps_app.settings.production
